Applied patch by Vasilis Kaoutsis: now checks for the MSR feature as well; obviously some Pentium 200 MMX pretend to support MTRRs. This should fix bug #553.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19899 a95241bf-73f2-0310-859d-f6bbb57e9c96